[project]
name = "tempo-py"
version = "0.1.0"
description = "Tempo blockchain Python SDK — pure functions + data models on web3.py"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eth-utils>=5.2.0",
    "eth-account>=0.13.0",
    "rlp>=4.1.0",
    "web3>=7.0.0",
    "attrs>=24.0.0",
    "eth-contract>=0.4.1",
]
