[project]
name = "tempo-py"
version = "0.1.0"
description = "Tempo blockchain Python SDK, based on web3.py and eth-contract"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eth-utils>=5.2.0",
    "eth-account>=0.13.0",
    "rlp>=4.1.0",
    "web3>=7.0.0",
    "attrs>=24.0.0",
    "eth-contract>=0.4.1",
]

[project.urls]
homepage = "https://github.com/yihuang/tempo-py"
repository = "https://github.com/yihuang/tempo-py"

[project.scripts]
tempo-devnet = "tempo.devnet.cli:main"

[project.optional-dependencies]
devnet = [
    "pyyaml>=6.0",
    "supervisor>=4.2",
    "fire>=0.7.0",
    "tomlkit>=0.13.0",
    "jsonmerge>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tempo"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
extend-select = ["PLC0415", "ANN", "UP"]

[tool.ruff.format]
quote-style = "double"
